test/07-tls-ejemplo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-aeo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aeo.rocket-sandbox.local.net
    secretName: tls-aeo
  rules:
    - host: aeo.rocket-sandbox.local.net
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: hello-v1-svc
              port:
                number: 80
