test/ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-tls
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - norm.local.net
    secretName: norm-local-net
  rules:
    - host: norm.local.net
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: hello-v1-svc
              port:
                number: 80
