test/ingress_tls_template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-tls
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - <tls-host>
    secretName: <tls-name>
  rules:
    - host: <tls-host>
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: hello-v1-svc
              port:
                number: 80
